queryapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: queryapi
  name: queryapi
spec:
  ports:
    - name: "5679"
      port: 5679
      targetPort: 5679
  selector:
    io.kompose.service: queryapi
status:
  loadBalancer: {}
